--- a/README.rdoc
+++ b/README.rdoc
@@ -4,3 +4,25 @@
 ---
 
 1. Setup routes for Watches
+
+2. Generate controller for Watches.
+
+3. Assigned an array to @watches instance var.
+
+4. Loop over the @watches array in the index view
+
+5. Use Hash of attrbutes in Array
+
+6. Move Hash of attributes to seeds.rb file.
+
+7. Generate a Watch model.
+
+8. Edit the migration file.
+
+9. Fill in the data in seeds.rb
+
+10. Rake and seed the DB
+
+11. Markup the shared application view.
+
+12. Finish index.html.erb markup
